# hoyolab-daily-bot

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py  utils.py
